--- a/_MOB_paper.bib
+++ b/_MOB_paper.bib
@@ -15,6 +15,75 @@ title = {{Interpretable machine learning for psychological research: Opportuniti
 year = {2023}
 }
 
+@book{JameyWitt23,
+  title={An introduction to statistical learning: With applications in {R} (2nd ed.)},
+  author={James, Gareth and Witten, Daniela and Hastie, Trevor and Tibshirani, Robert and Taylor, Jonathan},
+  year={2017},
+  publisher={Springer},
+address={New York, NY}
+}
+
+
+@article{RooiyWeed20,
+  title={Cross-validation: A method every psychologist should know},
+  author={de Rooij, Mark and Weeda, Wouter},
+  journal={Advances in Methods and Practices in Psychological Science},
+  volume={3},
+  number={2},
+  pages={248--263},
+  year={2020},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+
+@article{PhilyRusc18,
+  title={Measuring the stability of results from supervised statistical learning},
+  author={Philipp, Michel and Rusch, Thomas and Hornik, Kurt and Strobl, Carolin},
+  journal={Journal of Computational and Graphical Statistics},
+  volume={27},
+  number={4},
+  pages={685--700},
+  year={2018},
+  publisher={Taylor \& Francis}
+}
+
+
+@article{JuddyWest17,
+  title={Experiments with more than one random factor: Designs, analytic models, and statistical power},
+  author={Judd, Charles M and Westfall, Jacob and Kenny, David A},
+  journal={Annual Review of Psychology},
+  volume={68},
+  pages={601--625},
+  year={2017},
+  publisher={Annual Reviews}
+}
+
+
+@article{ZeilyKoll20,
+  title={Various versatile variances: an object-oriented implementation of clustered covariances in {R}},
+  author={Zeileis, Achim and K{\"o}ll, Susanne and Graham, Nathaniel},
+  journal={Journal of Statistical Software},
+  volume={95},
+  pages={1--36},
+  year={2020}
+}
+
+@book{DunnyDunn81,
+  title={Peabody picture vocabulary test-revised},
+  author={Dunn, Lloyd M and Dunn, Leota M},
+  year={1981},
+address={Circle Pines, MN},
+  publisher={American Guidance Service}
+}
+
+
+@manual{NLSY, 
+author={Bureau of Labor Statistics, U.S. Department of Labor},
+title={{National Longitudinal Survey of Youth 1979 cohort, 1979-2016 (rounds 1-27)}},
+address={Columbus, OH},
+year={2019}
+}
+
 @article{StycyAntr21,
   title={Are ratings in the eye of the beholder? A non-technical primer on many facet {R}asch measurement to evaluate rater effects on teacher behavior rating scales},
   author={Styck, Kara M and Anthony, Christopher J and Flavin, Angela and Riddle, David and LaBelle, Brittany},
